--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
 </head>
 <body class="bg-slate-50 text-slate-900 overflow-x-hidden">
     <div id="root"></div>
+
+<script type="module" src="/src/main.tsx"></script>
+
+
 </body>
 </html>
