--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body class="bg-slate-50 text-slate-900 overflow-x-hidden">
     <div id="root"></div>
 
-<script type="module" src="/src/pages/main.tsx"></script>
+<script type="module" src="/src/pages/index.tsx"></script>
 
 
 </body>
